# crispii_music

./: Cargo.toml  README.md
src/: notes.rs
src/notes/: letter_note.rs  modifier.rs  number_note.rs  octave.rs
